tests/NormalTests/paczka1/fuzzy1/98019016.err
Error in line 2: SQM1A A621 60,3
Error in line 14: iTz6 A769 204,28
Error in line 22: SQM1A A804 93,7
Error in line 10: iTz6 A769 51,2
Error in line 23: SQM1A A621 47,7
Error in line 8: jmUGrK2P8 S472 12,1
